update java-mod example README